<resources>
    <string name="app_name">NApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_one_variable_equations">One Variable Equations</string>
    <string name="title_activity_incremental_search">Incremental Search</string>
    <string name="title_activity_bisection">Bisection</string>
    <string name="title_activity_false_position">False Position</string>
    <string name="enter_x_lower">Enter lower limit</string>
    <string name="enter_x_upper">Enter upper limit</string>
    <string name="enter_tolerance">Enter tolerance e.g., 0.5E-8, 10^-5</string>
    <string name="enter_iterations">Enter number of iterations</string>
    <string name="calculate">Calculate</string>
    <string name="one_variable_eq">One Variable Equations</string>
    <string name="bisection">Bisection</string>
    <string name="x_lower_not_less">Lower limit must be less than upper limit.</string>
    <string name="invalid_tolerance">Tolerance format is not valid.</string>
    <string name="fill_in_all_fields">Fill in all fields, please.</string>
    <string name="false_position">False Position</string>
    <string name="incremental_search">Incremental Search</string>
    <string name="enter_initial_value">Enter initial value</string>
    <string name="enter_delta_value">Enter delta value</string>
    <string name="entered_values_format_not_valid">Entered values format is not valid.</string>
    <string name="help">Help</string>
    <string name="step_by_step">Step by step</string>
    <string name="guide_menu">Guide menu</string>
    <string name="title_activity_guide_menu">Guide Menu</string>
    <string name="incremental_search_help">The aim of the method is to find an interval containing at least one root of a particular function. The function is evaluated in an initial point and in that same point plus a delta. If one of the evaluations is negative and the other is positive, we can ensure that there is a root between those points.</string>
    <string name="bisection_help">Bisection method splits the initial interval, that has the function’s root, in two subintervals of the same size. To select the new interval, the function evaluated in the midpoint is multiplied with the function evaluated in the interval’s lower limit. If the result is negative, the new interval is [lower limit, midpoint], otherwise the new interval is [midpoint, upper limit].</string>
    <string name="false_position_help">This method conserves all the characteristics and conditions of the Bisection method, except for the way how the midpoint inside the given interval is calculated. In this case, the line joining the points (a, f(a)) and \t\t(b, f(b)) is found and, because one of that points is above the x-axis and the other one is below it, we know that there’s a cutoff point between the line and the mentioned axis. This cutoff point has the form (Xm, 0), \t\twhere Xm represents the searched midpoint.</string>
    <string name="error_calc_error">\tError calculation problem. \nPlease, try with absolute error.</string>
    <string name="abs_error">Absolute error</string>
    <string name="rel_error">Relative error</string>
    <string name="results_table">Results Table</string>
    <string name="title_activity_fixed_point">Fixed Point</string>
    <string name="enter_g_x">Enter g(x) (if necessary)</string>
    <string name="fixed_point">Fixed Point</string>
    <string name="title_activity_newton">Newton</string>
    <string name="newton">Newton</string>
    <string name="enter_d_f_x">Enter f \'(x) (if necessary)</string>
    <string name="secant">Secant</string>
    <string name="multiple_roots">Multiple Roots</string>
    <string name="title_activity_secant">Secant</string>
    <string name="title_activity_multiple_roots">Multiple Roots</string>
    <string name="fixed_point_help">When given a function f(x)= 0, we need to isolate one of its variables to get a function x = g(x). Then we give an initial point that seems to be near a root of the function f(x) and call it X0. To calculate X1 we need to evaluate g(x) in X0, to calculate X2 we need to evaluate g(x) in X1, and so on until we find a value where Xn+1=g(Xn).</string>
    <string name="newton_help">This method conserves all the characteristics and conditions of the Fixed Point method, except for how g function is calculated. In this case \n\n\t\t\t\t\t\t\t\t\t\t\t\t\t\tg(x) = x – (f(x) / f \'(x)) \n\nSo Xn+1 is calculated as Xn+1 = Xn – (f(Xn) / f \'(Xn)).</string>
    <string name="secant_help">The Secant method is a variant of the Newton’s Method, but in this method the derivative is replaced with an expression which brings it nearer \n\n\t\t\t\t\tXn+2 = Xn+1 – (f(Xn+1)*(Xn+1-Xn) / f(Xn+1) - f(Xn)) \n\nThis way, and beginning with two initial random values, the next one can be calculated using the mentioned expression as \nX2 = X1 – ((f(X1)*(X1-X0)) / (f(X1)-f(X0)).</string>
    <string name="multiple_roots_help">This method is a variant of Newton’s method to solve equations that have roots with critical values (minimum, maximum or inflection). The following expression is used to calculate the next Xn \n\n\t\t\t\tXn+1 = Xn - ((f(Xn)*f \'(Xn)) / ((f \'(Xn)^2) – (f(Xn)*f \'\'(Xn))))</string>
    <string name="enter_d_2_f_x">Enter f \'\'(x) (if necessary)</string>
    <string-array name="one_var_eqs_methods">
        <item>Incremental Search</item>
        <item>Bisection</item>
        <item>False Position</item>
        <item>Fixed Point</item>
        <item>Newton</item>
        <item>Secant</item>
        <item>Multiple Roots</item>
    </string-array>
    <string name="f_x">f(x) = </string>
    <string name="df_x">f  \'(x) = </string>
    <string name="d2f_x">f \'\'(x) = </string>
    <string name="g_x">g(x) = </string>
    <string name="go_to_methods">Go to the methods!</string>
    <string name="enter_f_x">Enter f(x)</string>
    <string name="title_activity_input_functions">Input Functions</string>
    <string name="f_x_empty">f(x) is necessary.</string>
    <string name="see_example">See an example</string>
    <string name="title_activity_topics">Topics</string>
    <string name="systems_of_eq">Systems of Equations</string>
    <string name="interpolation">Interpolation</string>
    <string name="g_x_empty">g(x) is necessary.</string>
    <string name="d_f_x_empty">f \'(x) is necessary.</string>
    <string name="d_f_x_and_d_2_f_x_empty">f \'(x) and f \'\'(x) are necessary.</string>
    <string name="error_in_fx">Error in f(x).</string>
    <string name="error_in_dfx">Error in f \'(x).</string>
    <string name="error_in_d2fx">Error in f \'\'(x).</string>
    <string name="error_in_gx">Error in g(x).</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="how_to_enter_function">How to enter a function?</string>
    <string name="title_activity_input_matrices">Input Matrices</string>
    <string name="title_activity_systems_of_equations">Systems of Equations</string>
    <string-array name="systems_of_eqs_methods">
        <item>Gaussian Elimination</item>
        <item>LU Factorization</item>
        <item>Stationary Iterative Methods</item>
    </string-array>
    <string name="how_to_enter_matrix">How to enter a matrix?</string>
    <string name="title_activity_gaussian_elimination">Gaussian Elimination</string>
    <string name="title_activity_lufactorization">LU Factorization</string>
    <string name="gaussian_elimination">Gaussian Elimination</string>
    <string name="lu_factorization">LU Factorization</string>
    <string name="enter_matrix_a">Enter Matrix A</string>
    <string name="enter_vector_b">Enter vector b</string>
    <string name="enter_unk_number">Enter the number of unknowns</string>
    <string name="create_mat">Create Matrix</string>
    <string name="enter_valid_unk_number">Enter a valid number of unknowns, please.</string>
    <string name="total_pivoting">Total Pivoting</string>
    <string name="without_pivoting">Without Pivoting</string>
    <string name="partial_pivoting">Partial Pivoting</string>
    <string name="scaled_partial_pivoting">Scaled Partial Pivoting</string>
    <string name="inf_solutions">The system of equations has infinite solutions.</string>
    <string name="pivoting">Pivoting: </string>
    <string name="without_pivoting_help">Given an augmented matrix Ab, the purpose of the Gaussian Elimination is to do elementary row operations until we get the equivalent system, in which the coefficient matrix is an upper triangular matrix. For that purpose, in the stage k, we calculate the multipliers of each row dividing each element of the column k under the element in the diagonal by the element of the row k. After that, we change every row under the row k for a new row, calculated as: \n\n\t\t\t\t\t\t\tNew Row (i) = Row (i) – Multiplier(i)(k)*Row (k) \n\nOnce we get the desired upper triangular matrix, regressive substitution is applied to solve the system of equations.</string>
    <string name="partial_pivoting_help">The Gaussian Elimination method with partial pivoting is a variant of Gaussian Elimination. But with the objective to reduce propagation of error, we try to locate into the diagonal all the possible maximum values of each column of the submatrix (excluding the column of the independent terms) changing its rows. For that purpose, in the stage k, we have to search the higher value (in absolute value) of the column k under the element in the diagonal and change the row in which that higher value is located with the row k.</string>
    <string name="total_pivoting_help">The Gaussian Elimination method with total pivoting has the same characteristics of Gaussian Elimination. But with the objective to reduce propagation of error, we try to locate into the diagonal all the possible maximum values of the submatrix (excluding the column of the independent terms) changing its rows and/or columns. For that purpose, in the stage k, first, we create a marks vector using the numbers from 1 to n for the unknowns. Then, we have to search the higher value (in absolute value) of the submatrix formed by the rows under the row k and the columns to the right of the column k. Once we find that higher value, we have to change the row and/or column in which that higher value is located with the row and/or column k to put that element in the diagonal, not forgetting to change the marks values when we needed to change columns.</string>
    <string name="scaled_partial_pivoting_help">The Gaussian Elimination method with scaled partial pivoting is a variant of Gaussian Elimination with partial pivoting. But with the objective to reduce propagation of error, first and only at the beginning of the process, we find and store the maximum value of each row (excluding the column of the independent terms). Then, we try to locate into the diagonal all the possible maximum values (in absolute value) between the elements of each column divided by the maximum value of its respective row, using the maximum row values that we found at the beginning. For that purpose, in the stage k, we have to search the higher value (in absolute value), under the element in the diagonal, between the elements of the column k divided by its respective maximum row value (found at the beginning) and change the row in which that higher value is located with the row k.</string>
    <string name="method">Method: </string>
    <string name="crout">Crout</string>
    <string name="doolittle">Doolittle</string>
    <string name="cholesky">Cholesky</string>
    <string name="stages_table">Stages Table</string>
    <string name="determinant">Matrix A determinant</string>
    <string name="change_vector_b">Change Vector b</string>
	<string name="calc_mat_inverse">Calculate Matrix Inverse</string>
</resources>